--- a/SmartCMS/Views/Account/Login.cshtml
+++ b/SmartCMS/Views/Account/Login.cshtml
@@ -5,49 +5,56 @@
 }
 
 
-<div class="panel panel-default">
-    <div class="panel-heading">
-        @ViewBag.Title
-    </div>
-    <div class="panel-body">
-        @if (!ViewData.ModelState.IsValid)
-        {
-            <div class="alert alert-danger">
-                @Html.ValidationSummary(true)
-            </div>
-        }
-        @using (Html.BeginForm(new { role = "form", ReturnUrl = ViewBag.ReturnUrl }))
-        {
-            @Html.AntiForgeryToken()
+<div class="content-wrapper">
+    <div class="main-content">
 
-            <div style="width:400px; margin:50px auto; text-align:center;">
-                <div class="form-group">
-                    <div class='input-group date'>
-                        <input type='text' class="form-control" name="UserName" placeholder="用户名" />
-                        <span class="input-group-addon">
-                            <span class="glyphicon glyphicon-user"></span>
-                        </span>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class='input-group date'>
-                        <input type='password' class="form-control" name="Password" placeholder="密码" />
-                        <span class="input-group-addon">
-                            <span class="glyphicon glyphicon-lock"></span>
-                        </span>
-                    </div>
-                </div>
-                <br/>
-                <button type="submit" class="btn btn-success">登 录</button>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                @ViewBag.Title
             </div>
-        }
-    </div>
-    <!-- /.panel-body -->
-    <div class="panel-footer">
-        &nbsp;
+            <div class="panel-body">
+                @if (!ViewData.ModelState.IsValid)
+                {
+                    <div class="alert alert-danger">
+                        @Html.ValidationSummary(true)
+                    </div>
+                }
+                @using (Html.BeginForm(new { role = "form", ReturnUrl = ViewBag.ReturnUrl }))
+                {
+                    @Html.AntiForgeryToken()
+
+                    <div style="width:400px; margin:50px auto; text-align:center;">
+                        <div class="form-group">
+                            <div class='input-group date'>
+                                <input type='text' class="form-control" name="UserName" placeholder="用户名" />
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-user"></span>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class='input-group date'>
+                                <input type='password' class="form-control" name="Password" placeholder="密码" />
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-lock"></span>
+                                </span>
+                            </div>
+                        </div>
+                        <br />
+                        <button type="submit" class="btn btn-success">登 录</button>
+                    </div>
+                }
+            </div>
+            <!-- /.panel-body -->
+            <div class="panel-footer">
+                &nbsp;
+            </div>
+        </div>
+
+
     </div>
 </div>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+        @section Scripts {
+            @Scripts.Render("~/bundles/jqueryval")
+        }
