--- a/SmartCMS/Views/Account/UserInfo.cshtml
+++ b/SmartCMS/Views/Account/UserInfo.cshtml
@@ -11,79 +11,86 @@
     </ul>
 </div>
 
-<div class="panel panel-default">
-    <div class="panel-heading">
-        User Account         
-    </div>
-    <div class="panel-body">
+<br />
+<div class="content-wrapper">
+    <div class="main-content">
 
-        @if (!ViewData.ModelState.IsValid)
-        {
-            <div class="alert alert-danger">
-                @Html.ValidationSummary()
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                User Account
             </div>
-        }
+            <div class="panel-body">
 
-        @if (ViewBag.SuccessMessage != null)
-        {
-            <div class="alert alert-success">
-                @ViewBag.SuccessMessage
-            </div>
-        }
+                @if (!ViewData.ModelState.IsValid)
+                {
+                    <div class="alert alert-danger">
+                        @Html.ValidationSummary()
+                    </div>
+                }
+
+                @if (ViewBag.SuccessMessage != null)
+                {
+                    <div class="alert alert-success">
+                        @ViewBag.SuccessMessage
+                    </div>
+                }
 
 
-        @using (Html.BeginForm("UserInfo", "Account"))
-        {
-        @Html.AntiForgeryToken()
-        @Html.HiddenFor(m=>m.ID)
-        <div style="width:400px; margin:auto; text-align:center;">
-            <div class="form-group">
-                <div class='input-group date'>
-                    @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", disabled = "true" })
-                    <span class="input-group-addon">
-                        <span class="glyphicon glyphicon-bookmark"></span>
-                    </span>
-                </div>
-            </div>
+                @using (Html.BeginForm("UserInfo", "Account"))
+                {
+                    @Html.AntiForgeryToken()
+                    @Html.HiddenFor(m => m.ID)
+                    <div style="width:400px; margin:auto; text-align:center;">
+                        <div class="form-group">
+                            <div class='input-group date'>
+                                @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", disabled = "true" })
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-bookmark"></span>
+                                </span>
+                            </div>
+                        </div>
 
-            <div class="form-group">
-                <div class='input-group date'>
-                    @Html.TextBoxFor(m => m.RealName, new { @class = "form-control", placeholder = "真实姓名", maxlength = 10 })
-                    <span class="input-group-addon">
-                        <span class="glyphicon glyphicon-user"></span>
-                    </span>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class='input-group date'>
-                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control", disabled = "true", placeholder = "邮箱" })
-                    <span class="input-group-addon">
-                        <span class="glyphicon glyphicon-bookmark"></span>
-                    </span>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class='input-group date'>
-                    @Html.PasswordFor(m => m.Password, new { @class = "form-control", value = Model.Password, placeholder = "当前密码", maxlength = 20 })
-                    <span class="input-group-addon">
-                        <span class="glyphicon glyphicon-lock"></span>
-                    </span>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class='input-group date'>
-                    @Html.DropDownListFor(m=>m.RoleId, new SelectList(Model.Roles, "ID", "Role"), new{ @class = "form-control"})
-                    <span class="input-group-addon">
-                        <span class="glyphicon glyphicon-globe"></span>
-                    </span>
-                </div>
-            </div>
-            <a href="~/Account/UserList" class="btn btn-success" style="color:white;">返 回</a>
+                        <div class="form-group">
+                            <div class='input-group date'>
+                                @Html.TextBoxFor(m => m.RealName, new { @class = "form-control", placeholder = "真实姓名", maxlength = 10 })
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-user"></span>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class='input-group date'>
+                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control", disabled = "true", placeholder = "邮箱" })
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-bookmark"></span>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class='input-group date'>
+                                @Html.PasswordFor(m => m.Password, new { @class = "form-control", value = Model.Password, placeholder = "当前密码", maxlength = 20 })
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-lock"></span>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class='input-group date'>
+                                @Html.DropDownListFor(m => m.RoleId, new SelectList(Model.Roles, "ID", "Role"), new { @class = "form-control" })
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-globe"></span>
+                                </span>
+                            </div>
+                        </div>
+                        <a href="~/Account/UserList" class="btn btn-success" style="color:white;">返 回</a>
 
-            <button type="submit" class="btn btn-success">更 新</button>
+                        <button type="submit" class="btn btn-success">更 新</button>
+                    </div>
+
+                }
+
+            </div>
         </div>
-
-        }
 
     </div>
 </div>
