--- a/SmartCMS/Views/Account/UserList.cshtml
+++ b/SmartCMS/Views/Account/UserList.cshtml
@@ -11,120 +11,128 @@
     </ul>
 </div>
 
-<div class="panel panel-default">
-    <div class="panel-heading">
-        Users List
-    </div>
-    <div class="panel-body">
-        @if (!ViewData.ModelState.IsValid)
-        {
-            <div class="alert alert-danger">
-                @Html.ValidationSummary()
-            </div>
-        }
+<br />
+<div class="content-wrapper">
+    <div class="main-content">
 
-        @if (ViewBag.SuccessMessage != null)
-        {
-            <div class="alert alert-success">
-                @ViewBag.SuccessMessage
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                Users List
             </div>
-        }
-        <div class="dataTable_wrapper">
-            <div style="text-align: right; float: right; margin: 10px 10px 0 0;">
-                <span> </span>
+            <div class="panel-body">
+                @if (!ViewData.ModelState.IsValid)
+                {
+                    <div class="alert alert-danger">
+                        @Html.ValidationSummary()
+                    </div>
+                }
+
+                @if (ViewBag.SuccessMessage != null)
+                {
+                    <div class="alert alert-success">
+                        @ViewBag.SuccessMessage
+                    </div>
+                }
+                <div class="dataTable_wrapper">
+                    <div style="text-align: right; float: right; margin: 10px 10px 0 0;">
+                        <span> </span>
+                    </div>
+                    <table class="table table-striped table-bordered table-hover" id="dataTables-example" style="font-size:0.9em;">
+                        <thead>
+                            <tr>
+                                <th style="text-align: center;">ID</th>
+                                <th>用户名</th>
+                                <th>真实姓名</th>
+                                <th>部门</th>
+                                <th style="text-align: center;">注册时间</th>
+                                <th style="text-align: center;">最后登录时间</th>
+                                <th style="text-align: center;">操作</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (SmartCMS.Models.UserViewModel item in Model)
+                            {
+                                <tr class="odd">
+                                    <td style="text-align: center; font-weight: bold;"><a href="~/Account/UserInfo/@item.ID" style="padding:5px;">@Html.DisplayFor(modelItem => item.ID)</a></td>
+                                    <td style="text-align: left; padding-left:15px;">@Html.DisplayFor(modelItem => item.UserName) @if (item.Locked)
+                                    {<span class="glyphicon glyphicon-lock"></span>}</td>
+                                    <td style="text-align: left; padding-left: 15px;">@Html.DisplayFor(modelItem => item.RealName)</td>
+                                    <td style="text-align: left; padding-left: 15px;">@Html.DisplayFor(modelItem => item.RoleName)</td>
+                                    <td style="text-align: center;">@Html.DisplayFor(modelItem => item.RegisterTime)</td>
+                                    <td style="text-align: center;">@Html.DisplayFor(modelItem => item.LastLoginTime)</td>
+                                    <td style="text-align: center;">
+                                        <a href="~/Account/UserInfo/@item.ID" title="编辑" style="padding:5px;"><span class="glyphicon glyphicon-edit">编辑</span></a>
+                                        @if (item.Locked)
+                                        {
+                                            using (Html.BeginForm("Unlock", "Account", FormMethod.Post, new { id = "unlockForm_" + item.ID, style = "display:none;" }))
+                                            {
+                                                @Html.AntiForgeryToken()
+                                                <input type="hidden" name="id" value="@item.ID" />
+                                            }
+                                            <a href="javascript:document.getElementById('unlockForm_@item.ID').submit()" title="解锁" style="padding:5px;"><span class="glyphicon glyphicon-eye-open">解锁</span></a>
+                                        }
+                                        else
+                                        {
+                                            using (Html.BeginForm("Lock", "Account", FormMethod.Post, new { id = "lockForm_" + item.ID, style = "display:none;" }))
+                                            {
+                                                @Html.AntiForgeryToken()
+                                                <input type="hidden" name="id" value="@item.ID" />
+                                            }
+                                            <a href="javascript:document.getElementById('lockForm_@item.ID').submit()" title="锁定" style="padding:5px;"><span class="glyphicon glyphicon-lock">锁定</span></a>
+                                        }
+
+                                        @using (Html.BeginForm("Delete", "Account", FormMethod.Post, new { id = "deleteForm_" + item.ID, style = "display:none;" }))
+                                        {
+                                            @Html.AntiForgeryToken()
+                                            <input type="hidden" name="id" value="@item.ID" />
+                                        }
+                                        <a href="javascript:uid=@item.ID; $('#deleteModal').modal('show');  " title="删除" style="padding:5px;"><span class="glyphicon glyphicon-remove">删除</span></a>
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                    <a href="~/Account/Create" class="btn btn-success" style="float: left; margin-top: -42px; color:white;">添加用户</a>
+                </div>
+                <!-- /.Table -->
             </div>
-            <table class="table table-striped table-bordered table-hover" id="dataTables-example" style="font-size:0.9em;">
-                <thead>
-                    <tr>
-                        <th style="text-align: center;">ID</th>
-                        <th>用户名</th>
-                        <th>真实姓名</th>
-                        <th>部门</th>
-                        <th style="text-align: center;">注册时间</th>
-                        <th style="text-align: center;">最后登录时间</th>
-                        <th style="text-align: center;">操作</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (SmartCMS.Models.UserViewModel item in Model)
-                    {
-                        <tr class="odd">
-                            <td style="text-align: center; font-weight: bold;"><a href="~/Account/UserInfo/@item.ID" style="padding:5px;">@Html.DisplayFor(modelItem => item.ID)</a></td>
-                            <td style="text-align: left; padding-left:15px;">@Html.DisplayFor(modelItem => item.UserName) @if (item.Locked) {<span class="glyphicon glyphicon-lock"></span>}</td>
-                            <td style="text-align: left; padding-left: 15px;">@Html.DisplayFor(modelItem => item.RealName)</td>
-                            <td style="text-align: left; padding-left: 15px;">@Html.DisplayFor(modelItem => item.RoleName)</td>
-                            <td style="text-align: center;">@Html.DisplayFor(modelItem => item.RegisterTime)</td>
-                            <td style="text-align: center;">@Html.DisplayFor(modelItem => item.LastLoginTime)</td>
-                            <td style="text-align: center;">
-                                <a href="~/Account/UserInfo/@item.ID" title="编辑" style="padding:5px;"><span class="glyphicon glyphicon-edit">编辑</span></a>
-                                @if(item.Locked)
-                                {
-                                    using (Html.BeginForm("Unlock", "Account", FormMethod.Post, new { id = "unlockForm_" + item.ID, style = "display:none;" }))
-                                    {
-                                        @Html.AntiForgeryToken()
-                                        <input type="hidden" name="id" value="@item.ID" />
-                                    }
-                                    <a href="javascript:document.getElementById('unlockForm_@item.ID').submit()" title="解锁" style="padding:5px;"><span class="glyphicon glyphicon-eye-open">解锁</span></a>
-                                }
-                                else
-                                {
-                                    using (Html.BeginForm("Lock", "Account", FormMethod.Post, new { id = "lockForm_" + item.ID, style = "display:none;" }))
-                                    {
-                                        @Html.AntiForgeryToken()
-                                        <input type="hidden" name="id" value="@item.ID" />                                        
-                                    }
-                                    <a href="javascript:document.getElementById('lockForm_@item.ID').submit()" title="锁定" style="padding:5px;"><span class="glyphicon glyphicon-lock">锁定</span></a>
-                                }
-                                
-                                @using (Html.BeginForm("Delete", "Account", FormMethod.Post, new { id = "deleteForm_" + item.ID, style = "display:none;" }))
-                                {
-                                    @Html.AntiForgeryToken()
-                                    <input type="hidden" name="id" value="@item.ID" />                                    
-                                }                                
-                                <a href="javascript:uid=@item.ID; $('#deleteModal').modal('show');  " title="删除" style="padding:5px;" ><span class="glyphicon glyphicon-remove">删除</span></a>
-                            </td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
-            <a href="~/Account/Create" class="btn btn-success" style="float: left; margin-top: -42px; color:white;">添加用户</a>
+            <!-- /.panel-body -->
+            <div class="panel-footer">
+                &nbsp;
+            </div>
         </div>
-        <!-- /.Table -->
-    </div>
-    <!-- /.panel-body -->
-    <div class="panel-footer">
-        &nbsp;
+
     </div>
 </div>
 
-<script>
-    $(document).ready(function () {
-        $('#dataTables-example').DataTable({
-            "responsive": true,
-            "paging": true,
-            "ordering": true,
-            "info": false,
-            "searching": false,
-            "pageLength": 25,
-        });
-    });
-    var uid;
-</script>
+        <script>
+            $(document).ready(function () {
+                $('#dataTables-example').DataTable({
+                    "responsive": true,
+                    "paging": true,
+                    "ordering": true,
+                    "info": false,
+                    "searching": false,
+                    "pageLength": 25,
+                });
+            });
+            var uid;
+        </script>
 
 
-<!-- 模态框（Modal） -->
-<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel">删除用户</h4>
-            </div>
-            <div class="modal-body">确定要删除该账号吗？</div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary" onclick="$('#deleteForm_' + uid).submit();">确认</button>
-            </div>
-        </div><!-- /.modal-content -->
-    </div><!-- /.modal -->
-</div>
+        <!-- 模态框（Modal） -->
+        <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title" id="myModalLabel">删除用户</h4>
+                    </div>
+                    <div class="modal-body">确定要删除该账号吗？</div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                        <button type="button" class="btn btn-primary" onclick="$('#deleteForm_' + uid).submit();">确认</button>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal -->
+        </div>
