--- a/SmartCMS/Views/Admin/Log.cshtml
+++ b/SmartCMS/Views/Admin/Log.cshtml
@@ -8,62 +8,69 @@
 <div id="breadcrumbs">
     <ul>
         <li>@Html.ActionLink("智库管理", "Index", "CMS") </li>
-        <li><a href="#">@ViewBag.Title</a></li>        
+        <li><a href="#">@ViewBag.Title</a></li>
     </ul>
 </div>
 
-<div class="panel panel-default">
-    <div class="panel-heading">
-        System Log
-    </div>
-    <div class="panel-body">
-        <div class="dataTable_wrapper">
-            <div style="text-align: right; float: right; margin: 10px 10px 0 0;">
-                <span> </span>
-            </div>
-            <table class="table table-striped table-bordered table-hover" id="dataTables-example">
-                <thead>
-                    <tr>
-                        <th>操作日志</th>                        
-                        <th>操作人</th>
-                        <th style="text-align: center;">时间</th>
-                        <th>IP地址</th>
-                        <th>浏览器</th>                        
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (SmartCMS.Models.LogViewModel item in Model)
-                    {
-                        <tr class="odd">
-                            <td style="text-align: left; font-weight: bold;">@Html.DisplayFor(modelItem => item.Action)</td>                            
-                            <td style="text-align: left;">@Html.DisplayFor(modelItem => item.User)</td>
-                            <td style="text-align: center;">@Html.DisplayFor(modelItem => item.ActionTime)</td>
-                            <td style="text-align: center;">@Html.DisplayFor(modelItem => item.IP)</td>
-                            <td style="text-align: left;">@Html.DisplayFor(modelItem => item.UserClient)</td>                            
-                        </tr>
-                    }
-                </tbody>
-            </table>
+<br />
 
+<div class="content-wrapper">
+    <div class="main-content">
+
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                System Log
+            </div>
+            <div class="panel-body">
+                <div class="dataTable_wrapper">
+                    <div style="text-align: right; float: right; margin: 10px 10px 0 0;">
+                        <span> </span>
+                    </div>
+                    <table class="table table-striped table-bordered table-hover" id="dataTables-example">
+                        <thead>
+                            <tr>
+                                <th>操作日志</th>
+                                <th>操作人</th>
+                                <th style="text-align: center;">时间</th>
+                                <th>IP地址</th>
+                                <th>浏览器</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (SmartCMS.Models.LogViewModel item in Model)
+                            {
+                                <tr class="odd">
+                                    <td style="text-align: left; font-weight: bold;">@Html.DisplayFor(modelItem => item.Action)</td>
+                                    <td style="text-align: left;">@Html.DisplayFor(modelItem => item.User)</td>
+                                    <td style="text-align: center;">@Html.DisplayFor(modelItem => item.ActionTime)</td>
+                                    <td style="text-align: center;">@Html.DisplayFor(modelItem => item.IP)</td>
+                                    <td style="text-align: left;">@Html.DisplayFor(modelItem => item.UserClient)</td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+
+                </div>
+                <!-- /.Table -->
+            </div>
+            <!-- /.panel-body -->
+            <div class="panel-footer">
+                &nbsp;
+            </div>
         </div>
-        <!-- /.Table -->
-    </div>
-    <!-- /.panel-body -->
-    <div class="panel-footer">
-        &nbsp;
+
     </div>
 </div>
-
-<script>
-    $(document).ready(function () {
-        $('#dataTables-example').DataTable({
-            "responsive": true,
-            "paging": true,
-            "ordering": true,
-            "info": false,
-            "searching": false,
-            "pageLength": 25,
-            "order": [[2, "desc"]],
-        });
-    });
-</script>
+        <script>
+            $(document).ready(function () {
+                $('#dataTables-example').DataTable({
+                    "responsive": true,
+                    "paging": true,
+                    "ordering": true,
+                    "info": false,
+                    "searching": false,
+                    "pageLength": 25,
+                    "order": [[2, "desc"]],
+                });
+            });
+        </script>
