--- a/SmartCMS/Views/CMS/AddArticle.cshtml
+++ b/SmartCMS/Views/CMS/AddArticle.cshtml
@@ -18,76 +18,82 @@
     </ul>
 </div>
 
+<br />
 
-<div class="panel panel-default">
-    <div class="panel-heading">
-        New Knowledge Item
-    </div>
-    <div class="panel-body">
+<div class="content-wrapper">
+    <div class="main-content">
 
-        @if (!ViewData.ModelState.IsValid)
-        {
-            <div class="alert alert-danger">
-                @Html.ValidationSummary()
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                New Knowledge Item
             </div>
-        }
+            <div class="panel-body">
 
-        @if (ViewBag.SuccessMessage != null)
-        {
-            <div class="alert alert-success">
-                @ViewBag.SuccessMessage
-            </div>
-        }
-
-
-        @using (Html.BeginForm("AddArticle", "CMS", FormMethod.Post, new { role = "form", enctype = "multipart/form-data" }))
-        {
-            @Html.AntiForgeryToken()
-            @Html.HiddenFor(m => m.CategoryId)
-            @Html.HiddenFor(m => m.PendingId)
-            <div style="width:698px; margin:auto; text-align:center;">
-                <div class="form-group">
-                    <div class='input-group date'>
-                        @Html.TextBoxFor(m => m.Question, new { @class = "form-control", value = Model.Question, placeholder = "词条名称或问题描述", maxlength = 50, length = 25 })
-                        <span class="input-group-addon">
-                            <span class="glyphicon glyphicon-text-width"></span>
-                        </span>
+                @if (!ViewData.ModelState.IsValid)
+                {
+                    <div class="alert alert-danger">
+                        @Html.ValidationSummary()
                     </div>
-                </div>
+                }
 
-                <div class="form-group">
-                    <div class=''>
-                        @Html.TextAreaFor(m => m.Answer, new { id = "myEditor", style="width:698px;height:320px;padding-left:10px;", value = Model.Answer, placeholder = "词条解析或问题解答", maxlength = 1000 })                        
+                @if (ViewBag.SuccessMessage != null)
+                {
+                    <div class="alert alert-success">
+                        @ViewBag.SuccessMessage
                     </div>
-                </div>
-                <div class="form-group">
-                    <div class='input-group date'>
-                        @Html.TextBoxFor(m => m.Keywords, new { @class = "form-control", value = Model.Keywords, placeholder = "关键词", maxlength = 50, length = 25 })
-                        <span class="input-group-addon">
-                            <span class="glyphicon glyphicon-tags"></span>
-                        </span>
-                    </div>
-                    <div class="keyword-tips">多个关键字以空格隔开</div>
-                </div>
+                }
 
-                <div class="form-group" style="height:40px;">
-                    <a href="javascript:;" class="file">
-                        选择附件文件
-                        <input type="file" name="file" />
-                    </a><span id="selectedFile"></span>
-                </div>
+
+                @using (Html.BeginForm("AddArticle", "CMS", FormMethod.Post, new { role = "form", enctype = "multipart/form-data" }))
+                {
+                    @Html.AntiForgeryToken()
+                    @Html.HiddenFor(m => m.CategoryId)
+                    @Html.HiddenFor(m => m.PendingId)
+                    <div style="width:698px; margin:auto; text-align:center;">
+                        <div class="form-group">
+                            <div class='input-group date'>
+                                @Html.TextBoxFor(m => m.Question, new { @class = "form-control", value = Model.Question, placeholder = "词条名称或问题描述", maxlength = 50, length = 25 })
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-text-width"></span>
+                                </span>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class=''>
+                                @Html.TextAreaFor(m => m.Answer, new { id = "myEditor", style="width:698px;height:320px;padding-left:10px;", value = Model.Answer, placeholder = "词条解析或问题解答", maxlength = 1000 })                        
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class='input-group date'>
+                                @Html.TextBoxFor(m => m.Keywords, new { @class = "form-control", value = Model.Keywords, placeholder = "关键词", maxlength = 50, length = 25 })
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-tags"></span>
+                                </span>
+                            </div>
+                            <div class="keyword-tips">多个关键字以空格隔开</div>
+                        </div>
+
+                        <div class="form-group" style="height:40px;">
+                            <a href="javascript:;" class="file">
+                                选择附件文件
+                                <input type="file" name="file" />
+                            </a><span id="selectedFile"></span>
+                        </div>
                 
 
-                <a href="~/CMS/Category/@Model.CategoryId" class="btn btn-success" style="color:white;">返 回</a>
+                        <a href="~/CMS/Category/@Model.CategoryId" class="btn btn-success" style="color:white;">返 回</a>
                 
-                <button type="submit" class="btn btn-success">保 存</button>
-            </div>
+                        <button type="submit" class="btn btn-success">保 存</button>
+                    </div>
 
-        }
+                }
+
+            </div>
+        </div>
 
     </div>
 </div>
-
 <!---
 <script language="javascript">
     $(document).ready(function () {
