--- a/SmartCMS/Views/CMS/AddCategory.cshtml
+++ b/SmartCMS/Views/CMS/AddCategory.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SmartCMS.Models.CategoryViewModel
 @{
-    if(Model.ParentId !=0)
+    if (Model.ParentId != 0)
     {
         //ViewBag.Title = "添加子分类 - " + ViewBag.Category;
         ViewBag.Title = "添加知识分类";
@@ -26,63 +26,69 @@
     </ul>
 </div>
 
-<div class="panel panel-default">
-    <div class="panel-heading">
-        New Category
-    </div>
-    <div class="panel-body">
+<br />
 
-        @if (!ViewData.ModelState.IsValid)
-        {
-            <div class="alert alert-danger">
-                @Html.ValidationSummary()
+<div class="content-wrapper">
+    <div class="main-content">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                New Category
             </div>
-        }
+            <div class="panel-body">
 
-        @if (ViewBag.SuccessMessage != null)
-        {
-            <div class="alert alert-success">
-                @ViewBag.SuccessMessage
-            </div>
-        }
-
-
-        @using (Html.BeginForm("AddCategory", "CMS", FormMethod.Post))
-        {
-            @Html.AntiForgeryToken()
-            @Html.HiddenFor(m=>m.ParentId)
-            <div style="width:400px; margin:auto; text-align:center;">
-                <div class="form-group">
-                    <div class='input-group date'>
-                        @Html.TextBoxFor(m => m.Name, new { @class = "form-control", value = Model.Name, placeholder = "分类名称", maxlength = 20 })
-                        <span class="input-group-addon">
-                            <span class="glyphicon glyphicon-text-width"></span>
-                        </span>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <div class='input-group date'>
-                        @Html.TextAreaFor(m => m.Comment, new { @class = "form-control", value = Model.Comment, placeholder = "分类描述", maxlength = 100 })
-                        <span class="input-group-addon">
-                            <span class="glyphicon glyphicon-th-list"></span>
-                        </span>
-                    </div>
-                </div>
-                @if(Model.ParentId !=0)
+                @if (!ViewData.ModelState.IsValid)
                 {
-                    <a href="~/CMS/Category/@Model.ParentId" class="btn btn-success" style="color:white;">返 回</a>    
+                    <div class="alert alert-danger">
+                        @Html.ValidationSummary()
+                    </div>
                 }
-                else
+
+                @if (ViewBag.SuccessMessage != null)
                 {
-                    <a href="~/CMS/Categories" class="btn btn-success" style="color:white;">返 回</a>    
+                    <div class="alert alert-success">
+                        @ViewBag.SuccessMessage
+                    </div>
                 }
-                
 
-                <button type="submit" class="btn btn-success">保 存</button>
+
+                @using (Html.BeginForm("AddCategory", "CMS", FormMethod.Post))
+                {
+                    @Html.AntiForgeryToken()
+                    @Html.HiddenFor(m => m.ParentId)
+                    <div style="width:400px; margin:auto; text-align:center;">
+                        <div class="form-group">
+                            <div class='input-group date'>
+                                @Html.TextBoxFor(m => m.Name, new { @class = "form-control", value = Model.Name, placeholder = "分类名称", maxlength = 20 })
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-text-width"></span>
+                                </span>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class='input-group date'>
+                                @Html.TextAreaFor(m => m.Comment, new { @class = "form-control", value = Model.Comment, placeholder = "分类描述", maxlength = 100 })
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-th-list"></span>
+                                </span>
+                            </div>
+                        </div>
+                        @if (Model.ParentId != 0)
+                        {
+                            <a href="~/CMS/Category/@Model.ParentId" class="btn btn-success" style="color:white;">返 回</a>
+                        }
+                        else
+                        {
+                            <a href="~/CMS/Categories" class="btn btn-success" style="color:white;">返 回</a>
+                        }
+
+
+                        <button type="submit" class="btn btn-success">保 存</button>
+                    </div>
+
+                }
+
             </div>
-
-        }
-
+        </div>
     </div>
 </div>
