--- a/SmartCMS/Views/CMS/Categories.cshtml
+++ b/SmartCMS/Views/CMS/Categories.cshtml
@@ -12,45 +12,50 @@
     </ul>
 </div>
 
+<br />
+<div class="content-wrapper">
+    <div class="main-content">
 
-<div class="panel panel-default">
-    <div class="panel-heading">
-        Categories
-    </div>
-    <div class="panel-body">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                Categories
+            </div>
+            <div class="panel-body">
 
-        @if (!ViewData.ModelState.IsValid)
-        {
-            <div class="alert alert-danger">
-                @Html.ValidationSummary()
-            </div>
-        }
+                @if (!ViewData.ModelState.IsValid)
+                {
+                    <div class="alert alert-danger">
+                        @Html.ValidationSummary()
+                    </div>
+                }
 
-        @if (ViewBag.SuccessMessage != null)
-        {
-            <div class="alert alert-success">
-                @ViewBag.SuccessMessage
+                @if (ViewBag.SuccessMessage != null)
+                {
+                    <div class="alert alert-success">
+                        @ViewBag.SuccessMessage
+                    </div>
+                }
+                @if (User.IsInRole(Constants.Roles.ROLE_ADMIN)
+                    || User.IsInRole(Constants.Roles.ROLE_CHIEF_EDITOR))
+                {
+                    <div class="cms-tool-bar">
+                        <a href="~/CMS/AddCategory" class="btn btn-success">添加分类</a>            
+                    </div>
+                }
+                <hr style="width:100%;"/>
+                @foreach(SmartCMS.Models.CategoryViewModel category in Model)
+                {
+                    @DisplayCategory(category);           
+                }
             </div>
-        }
-        @if (User.IsInRole(Constants.Roles.ROLE_ADMIN)
-            || User.IsInRole(Constants.Roles.ROLE_CHIEF_EDITOR))
-        {
-            <div class="cms-tool-bar">
-                <a href="~/CMS/AddCategory" class="btn btn-success">添加分类</a>            
+            <!-- /.panel-body -->
+            <div class="panel-footer">
+                &nbsp;
             </div>
-        }
-        <hr style="width:100%;"/>
-        @foreach(SmartCMS.Models.CategoryViewModel category in Model)
-        {
-            @DisplayCategory(category);           
-        }
-    </div>
-    <!-- /.panel-body -->
-    <div class="panel-footer">
-        &nbsp;
+        </div>
+
     </div>
 </div>
-
 
 @helper DisplayCategory(SmartCMS.Models.CategoryViewModel category)
 {
