--- a/SmartCMS/Views/CMS/Category.cshtml
+++ b/SmartCMS/Views/CMS/Category.cshtml
@@ -19,165 +19,173 @@
     </ul>
 </div>
 
-<div class="panel panel-default">
-    <div class="panel-heading">
-        Categories & Knowledge
-    </div>
-    <div class="panel-body">
-        <div class="cms-tool-bar">
-            @if (User.IsInRole(Constants.Roles.ROLE_ADMIN)
+<br />
+
+<div class="content-wrapper">
+    <div class="main-content">
+
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                Categories & Knowledge
+            </div>
+            <div class="panel-body">
+                <div class="cms-tool-bar">
+                    @if (User.IsInRole(Constants.Roles.ROLE_ADMIN)
                 || User.IsInRole(Constants.Roles.ROLE_CHIEF_EDITOR))
             {
                 if (Model.Articles.Count() > 0 || Model.SubCategories.Count() > 0)
                 {
-                    <a href="javascript:uid=@Model.Id; $('#cantDeleteModal').modal('show'); " class="btn btn-warning">删除本分类</a>
+            <a href="javascript:uid=@Model.Id; $('#cantDeleteModal').modal('show'); " class="btn btn-warning">删除本分类</a>
                 }
                 else
                 {
-                    <a href="javascript:uid=@Model.Id; $('#deleteModal').modal('show'); " class="btn btn-warning">删除本分类</a>
-                }            
-                <a href="~/CMS/EditCategory/@Model.Id" class="btn btn-success">编辑本分类</a>
-                <a href="~/CMS/AddCategory/@Model.Id" class="btn btn-success">添加子类别</a>
+            <a href="javascript:uid=@Model.Id; $('#deleteModal').modal('show'); " class="btn btn-warning">删除本分类</a>
+                }
+            <a href="~/CMS/EditCategory/@Model.Id" class="btn btn-success">编辑本分类</a>
+            <a href="~/CMS/AddCategory/@Model.Id" class="btn btn-success">添加子类别</a>
             }
-            <a href="~/CMS/AddArticle/@Model.Id" class="btn btn-success" >添加知识词条</a>
-        </div>
-        @if (User.IsInRole(Constants.Roles.ROLE_ADMIN)
+                    <a href="~/CMS/AddArticle/@Model.Id" class="btn btn-success">添加知识词条</a>
+                </div>
+                @if (User.IsInRole(Constants.Roles.ROLE_ADMIN)
             || User.IsInRole(Constants.Roles.ROLE_CHIEF_EDITOR))
         {
             using (Html.BeginForm("DeleteCategory", "CMS", FormMethod.Post, new { id = "deleteForm_" + Model.Id, style = "display:none;" }))
             {
-                @Html.AntiForgeryToken()
-                <input type="hidden" name="id" value="@Model.Id" />
+        @Html.AntiForgeryToken()
+        <input type="hidden" name="id" value="@Model.Id" />
             }
         }
 
-        @if(Model.SubCategories.Count()>0)
-        {            
-            <div class="panel panel-default" style="max-width:735px;">
-                <div class="panel-heading category-name">
-                    <a href="~/CMS/Category/@Model.Id">@Model.Name</a> 子类别</div>
-                <div class="panel-body">
-                    @foreach (SmartCMS.Models.CategoryViewModel category in Model.SubCategories)
+                @if(Model.SubCategories.Count()>0)
+        {
+        <div class="panel panel-default" style="max-width:735px;">
+            <div class="panel-heading category-name">
+                <a href="~/CMS/Category/@Model.Id">@Model.Name</a> 子类别
+            </div>
+            <div class="panel-body">
+                @foreach (SmartCMS.Models.CategoryViewModel category in Model.SubCategories)
                     {
-                        <a href="~/CMS/Category/@category.Id" class="category-item btn btn-default">@category.Name</a>
-                    }                    
+                    <a href="~/CMS/Category/@category.Id" class="category-item btn btn-default">@category.Name</a>
+                    }
+            </div>
+        </div>
+        }
+
+
+                <hr style="clear:both; margin:10px 0px 10px 0px;" />
+                <div class="dataTable_wrapper">
+                    <div style="text-align: right; float: right; margin: 10px 10px 0 0;">
+                        <span> </span>
+                    </div>
+                    <table class="table table-striped table-bordered table-hover" id="dataTables-example">
+                        <thead>
+                            <tr>
+                                <th style="text-align: left;">知识词条&问题</th>
+                                <th style="text-align: left;">关键词</th>
+                                <th style="text-align: left;">录入人</th>
+                                <th>录入时间</th>
+                                <th>热度</th>
+                                <th>操作</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (SmartCMS.Models.KnowledgeViewModel item in Model.Articles)
+                    {
+                    <tr class="odd">
+                        <td style="text-align: left;"><a href="~/CMS/EditArticle/@item.Id">@Html.DisplayFor(modelItem => item.Question)</a>@if (!String.IsNullOrEmpty(item.Attachment)) { <a href="@item.Attachment" target="_blank"><span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span></a>}</td>
+                        <td style="text-align: left;">@Html.DisplayFor(modelItem => item.Keywords)</td>
+                        <td style="text-align: left;">@Html.DisplayFor(modelItem => item.CreatedBy)</td>
+                        <td style="text-align: center;">@Html.DisplayFor(modelItem => item.CreatedAt)</td>
+                        <td style="text-align: center;">@Html.DisplayFor(modelItem => item.Hits)</td>
+                        <td style="text-align: center;">
+                            <a href="~/CMS/EditArticle/@item.Id" title="编辑" style="padding:5px;"><span class="glyphicon glyphicon-edit">编辑</span></a>
+                            @using (Html.BeginForm("DeleteArticle", "CMS", FormMethod.Post, new { id = "deleteArticleForm_" + item.Id, style = "display:none;" }))
+                                {
+                                @Html.AntiForgeryToken()
+                                <input type="hidden" name="id" value="@item.Id" />
+                                }
+                            <a href="javascript:uid=@item.Id; $('#deleteArticleModal').modal('show');  " title="删除" style="padding:5px;"><span class="glyphicon glyphicon-remove">删除</span></a>
+                        </td>
+                    </tr>
+                    }
+                        </tbody>
+                    </table>
+                </div>
+
+                <div style="text-align:center;">
+                    <a href="javascript:history.go(-1);" class="btn btn-primary">返 回</a>
                 </div>
             </div>
-        }
-        
-        
-        <hr style="clear:both; margin:10px 0px 10px 0px;"/>
-        <div class="dataTable_wrapper">
-            <div style="text-align: right; float: right; margin: 10px 10px 0 0;">
-                <span> </span>
+            <!-- /.panel-body -->
+            <div class="panel-footer">
+                &nbsp;
             </div>
-            <table class="table table-striped table-bordered table-hover" id="dataTables-example">
-                <thead>
-                    <tr>
-                        <th style="text-align: left;">知识词条&问题</th>
-                        <th style="text-align: left;">关键词</th>
-                        <th style="text-align: left;">录入人</th>
-                        <th>录入时间</th>
-                        <th>热度</th>
-                        <th>操作</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (SmartCMS.Models.KnowledgeViewModel item in Model.Articles)
-                    {
-                        <tr class="odd">
-                            <td style="text-align: left;"><a href="~/CMS/EditArticle/@item.Id">@Html.DisplayFor(modelItem => item.Question)</a>@if (!String.IsNullOrEmpty(item.Attachment)) { <a href="@item.Attachment" target="_blank"><span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span></a>}</td>
-                            <td style="text-align: left;">@Html.DisplayFor(modelItem => item.Keywords)</td>
-                            <td style="text-align: left;">@Html.DisplayFor(modelItem => item.CreatedBy)</td>
-                            <td style="text-align: center;">@Html.DisplayFor(modelItem => item.CreatedAt)</td>
-                            <td style="text-align: center;">@Html.DisplayFor(modelItem => item.Hits)</td>
-                            <td style="text-align: center;">
-                                <a href="~/CMS/EditArticle/@item.Id" title="编辑" style="padding:5px;"><span class="glyphicon glyphicon-edit">编辑</span></a>
-                                @using (Html.BeginForm("DeleteArticle", "CMS", FormMethod.Post, new { id = "deleteArticleForm_" + item.Id, style = "display:none;" }))
-                                {
-                                    @Html.AntiForgeryToken()
-                                    <input type="hidden" name="id" value="@item.Id" />
-                                }
-                                <a href="javascript:uid=@item.Id; $('#deleteArticleModal').modal('show');  " title="删除" style="padding:5px;"><span class="glyphicon glyphicon-remove">删除</span></a>
-                            </td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
         </div>
 
-        <div style="text-align:center;">
-            <a href="javascript:history.go(-1);" class="btn btn-primary">返 回</a>
+    </div>
+</div>
+        <!-- 模态框（Modal） -->
+        <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title" id="myModalLabel">删除分类</h4>
+                    </div>
+                    <div class="modal-body">确定要删除本类别吗？</div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                        <button type="button" class="btn btn-danger" onclick="$('#deleteForm_' + uid).submit();">确认</button>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal -->
         </div>
-    </div>
-    <!-- /.panel-body -->
-    <div class="panel-footer">
-        &nbsp;
-    </div>
-</div>
 
-<!-- 模态框（Modal） -->
-<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel">删除分类</h4>
-            </div>
-            <div class="modal-body">确定要删除本类别吗？</div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-danger" onclick="$('#deleteForm_' + uid).submit();">确认</button>
-            </div>
-        </div><!-- /.modal-content -->
-    </div><!-- /.modal -->
-</div>
+        <!-- 模态框（Modal） -->
+        <div class="modal fade" id="cantDeleteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title" id="myModalLabel">删除分类</h4>
+                    </div>
+                    <div class="modal-body">本类别不为空，不能删除。请先清空文章及子类别？</div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">确定</button>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal -->
+        </div>
 
-<!-- 模态框（Modal） -->
-<div class="modal fade" id="cantDeleteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel">删除分类</h4>
-            </div>
-            <div class="modal-body">本类别不为空，不能删除。请先清空文章及子类别？</div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal">确定</button>
-            </div>
-        </div><!-- /.modal-content -->
-    </div><!-- /.modal -->
-</div>
-
-<!-- 模态框（Modal） -->
-<div class="modal fade" id="deleteArticleModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel">删除知识词条</h4>
-            </div>
-            <div class="modal-body">确定要删除该知识词条吗？</div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-danger" onclick="$('#deleteArticleForm_' + uid).submit();">确认</button>
-            </div>
-        </div><!-- /.modal-content -->
-    </div><!-- /.modal -->
-</div>
+        <!-- 模态框（Modal） -->
+        <div class="modal fade" id="deleteArticleModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title" id="myModalLabel">删除知识词条</h4>
+                    </div>
+                    <div class="modal-body">确定要删除该知识词条吗？</div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                        <button type="button" class="btn btn-danger" onclick="$('#deleteArticleForm_' + uid).submit();">确认</button>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal -->
+        </div>
 
 
-<script>
-    $(document).ready(function () {
-        $('#dataTables-example').DataTable({
-            "responsive": true,
-            "paging": true,
-            "ordering": true,
-            "info": false,
-            "searching": true,
-            "pageLength": 25,
-            "order": [[2, "desc"]],
-        });
-    });
-</script>
+        <script>
+            $(document).ready(function () {
+                $('#dataTables-example').DataTable({
+                    "responsive": true,
+                    "paging": true,
+                    "ordering": true,
+                    "info": false,
+                    "searching": true,
+                    "pageLength": 25,
+                    "order": [[2, "desc"]],
+                });
+            });
+        </script>
 
