--- a/SmartCMS/Views/CMS/Question.cshtml
+++ b/SmartCMS/Views/CMS/Question.cshtml
@@ -4,6 +4,7 @@
 
 @{
     ViewBag.Title = Model.Question;
+    SmartCMSPrincipal currentUser = (SmartCMSPrincipal)User;
 }
 
 
@@ -13,80 +14,131 @@
         <li><a href="~/CMS/Questions/@Model.CategoryId">问题解答</a></li>
     </ul>
 </div>
+<br />
 
-<div style="width:840px; padding:15px; border:1px solid #ddd;">
-    @if (TempData["SuccessMessage"] != null)
-    {
-        <div class="alert alert-success">
-            <button type="button" class="close" data-dismiss="alert">&times;</button> 
-            @TempData["SuccessMessage"]
-        </div>
-    }
+<div class="content-wrapper">
+    <div class="main-content">
 
-    <h1 class="question"> <i class="glyphicon glyphicon-question-sign"></i>@Model.Question</h1>
+        <div class="question-left">
+            @if (TempData["SuccessMessage"] != null)
+            {
+                <div class="alert alert-success">
+                    <button type="button" class="close" data-dismiss="alert">&times;</button>
+                    @TempData["SuccessMessage"]
+                </div>
+            }
+
+            @if (TempData["ErrorMessage"] != null)
+            {
+                <div class="alert alert-danger">
+                    <button type="button" class="close" data-dismiss="alert">&times;</button>
+                    @TempData["ErrorMessage"]
+                </div>
+            }
+
+            <h1 class="question"> <i class="glyphicon glyphicon-question-sign"></i>@Model.Question</h1>
 
 
-    <span class="question-info">@Model.CreatedBy  |  提问<text>@Model.Hits</text>次</span>
-    <span class="question-info" style="float:right;">分类:<a href="~/CMS/Questions/@Model.CategoryId">@Model.CategoryName</a> |  最近提问时间: @Model.LastAskedAt.Value.ToString("yy-MM-dd HH:mm:ss")</span>
-
-    <hr class="question" />
-
-    <h3 class="best-answer"><i class="glyphicon glyphicon-ok-circle"></i>最佳答案</h3>
-    <div>暂无</div>
-
-
-    @foreach (AnswerViewModel answer in Model.Answers)
-    {
-
-        <text>
-            @answer.Content
+            <span class="question-info">@Model.AskedBy.RealName <span class="user-level">@Model.AskedBy.Level</span> |  提问<text>@Model.Hits</text>次</span>
+            <span class="question-info" style="float:right;">分类:<a href="~/CMS/Questions/@Model.CategoryId">@Model.CategoryName</a> |  最近提问时间: @Model.LastAskedAt.Value.ToString("yyyy-MM-dd HH:mm")</span>
 
             <hr class="question" />
-        </text>
-    }
+
+            <h3 class="best-answer"><i class="glyphicon glyphicon-ok-circle"></i>最佳答案</h3>
+            @if (Model.BestAnswer != null)
+            {
+                @Model.BestAnswer.Content
+            }
+            else
+            {
+                <div>暂无</div>
+            }
+            
+            <hr class="question" />
+            <h3 class="other-answer"><i class="glyphicon glyphicon-th-list"></i>其他<span>@Model.AnswerCount</span>条回答</h3>
+            @if(Model.Answers ==null && Model.Answers.Count()==0)
+            {
+                <text>暂无</text>
+
+                <hr class="question" />
+            }
+            @foreach (AnswerViewModel answer in Model.Answers)
+            {
+                <text>
+                    <div class="other-answer-container">
+                        @answer.Content
+                        <br />
+                        <span class="question-info">@answer.AnswerBy.RealName <span class="user-level">@answer.AnswerBy.Level</span> |  回答于<i>@answer.AnswerAt.Value.ToString("yyyy-MM-dd HH:mm")</i></span>
+
+                        <div class="btn-group" style="float:right">
+                            <button type="button" class="btn btn-default like" aid="@answer.Id"><span class="glyphicon glyphicon-thumbs-up"></span>赞<i>@answer.Likes</i></button>
+                            <button type="button" class="btn btn-default unlike" aid="@answer.Id"><span class="glyphicon glyphicon-thumbs-down"></span>踩<i>@answer.Unlikes</i></button>
+                        </div>
+                    </div>
+                    <hr class="question" />
+                </text>
+            }
 
 
-    <hr class="question" />
 
-    @using (Html.BeginForm("Answer", "CMS", new { id = Model.Id }, FormMethod.Post, new { role = "form", enctype = "multipart/form-data" }))
-    {
-        @Html.AntiForgeryToken()
+            @using (Html.BeginForm("Answer", "CMS", new { id = Model.Id }, FormMethod.Post, new { role = "form", enctype = "multipart/form-data" }))
+            {
+            @Html.AntiForgeryToken()
 
-        <div style="width:100%; text-align:center;">
+            <div style="width:100%; text-align:center;">
 
-            <div class="alert alert-info">
-                如果您的回答被采纳，您将获得：系统奖励20（经验值）
-            </div>
-
-            <div class="form-group">
-                <div class=''>
-                    @Html.TextAreaFor(m => m.Answer, new { id = "myEditor", style = "width:100%;height:320px;padding-left:10px;", value = Model.Answer, placeholder = "词条解析或问题解答", maxlength = 1000 })
+                <div class="alert alert-info">
+                    如果您的回答被采纳，您将获得：系统奖励20（经验值）
                 </div>
-            </div>
 
-            <!--
-            <div class="form-group" style="height:40px;">
-                <a href="javascript:;" class="file">
-                    选择附件文件
-                    <input type="file" name="file" />
-                </a><span id="selectedFile"></span>
-            </div>
-                -->
+                <div class="form-group">
+                    <div class=''>
+                        @Html.TextAreaFor(m => m.Answer, new { id = "myEditor", style = "width:100%;height:320px;padding-left:10px;", value = Model.Answer, placeholder = "词条解析或问题解答", maxlength = 1000 })
+                    </div>
+                </div>
 
-            <p style="text-align:right;">
-                <a href="~/CMS/Questions/@Model.CategoryId" class="btn btn-success" style="color:white;">返 回</a>
-                <button type="submit" class="btn btn-success">提交回答</button>
-            </p>
+                <!--
+                <div class="form-group" style="height:40px;">
+                    <a href="javascript:;" class="file">
+                        选择附件文件
+                        <input type="file" name="file" />
+                    </a><span id="selectedFile"></span>
+                </div>
+                    -->
+
+                <p style="text-align:right;">
+                    <a href="~/CMS/Questions/@Model.CategoryId" class="btn btn-success" style="color:white;">返 回</a>
+                    <button type="submit" class="btn btn-success">提交回答</button>
+                </p>
+            </div>
+            }
+
         </div>
-    }
 
+
+
+        <div class="question-right">
+
+
+            <div class="user-avatar"></div>
+            @currentUser.RealName
+            <hr class="question" />
+
+            <h2>其他类似问题</h2>
+            <hr class="question" />
+
+            <h2>等待您来回答</h2>
+            <hr class="question" />
+        </div>
+
+        <br class="clear" />
+    </div>
 </div>
-
 
 <script>
     $(".file").on("change", "input[type='file']", function () {
         var filePath = $(this).val();
-        if (filePath.length>0) {
+        if (filePath.length > 0) {
             var arr = filePath.split('\\');
             var fileName = arr[arr.length - 1];
             $("#selectedFile").html(fileName);
