--- a/SmartCMS/Views/CMS/Search.cshtml
+++ b/SmartCMS/Views/CMS/Search.cshtml
@@ -10,94 +10,101 @@
         <li><a href="#">@ViewBag.Title</a></li>
     </ul>
 </div>
+<br />
 
-<div class="panel panel-default">
-    <div class="panel-heading">
-        Questions
-    </div>
-    <div class="panel-body">
-        
-        <div class="dataTable_wrapper">
-            <div style="text-align: right; float: right; margin: 10px 10px 0 0;">
-                <span> </span>
+<div class="content-wrapper">
+    <div class="main-content">
+
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                Questions
             </div>
-            <table class="table table-striped table-bordered table-hover" id="dataTables-example">
-                <thead>
-                    <tr>
-                        <th style="text-align: left;">知识词条&问题</th>
-                        <th style="text-align: left;">知识分类</th>
-                        <th style="text-align: left;">关键词</th>
-                        <th style="text-align: left;">录入人</th>
-                        <th>录入时间</th>
-                        <th>热度</th>
-                        <th>操作</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (SmartCMS.Models.KnowledgeViewModel item in Model)
-                    {
-                        <tr class="odd">
-                            <td style="text-align: left;"><a href="~/CMS/EditArticle/@item.Id">@Html.DisplayFor(modelItem => item.Question)</a>@if (!String.IsNullOrEmpty(item.Attachment)){ <a href="@item.Attachment" target="_blank"><span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span></a>}</td>
-                            <td style="text-align: left;">@Html.DisplayFor(modelItem => item.CategoryName)</td>
-                            <td>@Html.DisplayFor(modelItem => item.Keywords)</td>
-                            <td>@Html.DisplayFor(modelItem => item.CreatedBy)</td>
-                            <td style="text-align: center;">@Html.DisplayFor(modelItem => item.CreatedAt)</td>
-                            <td style="text-align: center;">@Html.DisplayFor(modelItem => item.Hits)</td>
-                            <td style="text-align: center;">
-                                <a href="~/CMS/EditArticle/@item.Id" title="编辑" style="padding:5px;"><span class="glyphicon glyphicon-edit">编辑</span></a>
-                                @using (Html.BeginForm("DeleteArticle", "CMS", FormMethod.Post, new { id = "deleteArticleForm_" + item.Id, style = "display:none;" }))
-                                {
-                                    @Html.AntiForgeryToken()
-                                    <input type="hidden" name="id" value="@item.Id" />
-                                }
-                                <a href="javascript:uid=@item.Id; $('#deleteArticleModal').modal('show');  " title="删除" style="padding:5px;"><span class="glyphicon glyphicon-remove">删除</span></a>
-                            </td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
+            <div class="panel-body">
+
+                <div class="dataTable_wrapper">
+                    <div style="text-align: right; float: right; margin: 10px 10px 0 0;">
+                        <span> </span>
+                    </div>
+                    <table class="table table-striped table-bordered table-hover" id="dataTables-example">
+                        <thead>
+                            <tr>
+                                <th style="text-align: left;">知识词条&问题</th>
+                                <th style="text-align: left;">知识分类</th>
+                                <th style="text-align: left;">关键词</th>
+                                <th style="text-align: left;">录入人</th>
+                                <th>录入时间</th>
+                                <th>热度</th>
+                                <th>操作</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (SmartCMS.Models.KnowledgeViewModel item in Model)
+                            {
+                                <tr class="odd">
+                                    <td style="text-align: left;"><a href="~/CMS/EditArticle/@item.Id">@Html.DisplayFor(modelItem => item.Question)</a>@if (!String.IsNullOrEmpty(item.Attachment))
+                                    { <a href="@item.Attachment" target="_blank"><span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span></a>}</td>
+                                    <td style="text-align: left;">@Html.DisplayFor(modelItem => item.CategoryName)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Keywords)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.CreatedBy)</td>
+                                    <td style="text-align: center;">@Html.DisplayFor(modelItem => item.CreatedAt)</td>
+                                    <td style="text-align: center;">@Html.DisplayFor(modelItem => item.Hits)</td>
+                                    <td style="text-align: center;">
+                                        <a href="~/CMS/EditArticle/@item.Id" title="编辑" style="padding:5px;"><span class="glyphicon glyphicon-edit">编辑</span></a>
+                                        @using (Html.BeginForm("DeleteArticle", "CMS", FormMethod.Post, new { id = "deleteArticleForm_" + item.Id, style = "display:none;" }))
+                                        {
+                                            @Html.AntiForgeryToken()
+                                            <input type="hidden" name="id" value="@item.Id" />
+                                        }
+                                        <a href="javascript:uid=@item.Id; $('#deleteArticleModal').modal('show');  " title="删除" style="padding:5px;"><span class="glyphicon glyphicon-remove">删除</span></a>
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+
+                <div style="text-align:center;">
+                    <a href="javascript:history.go(-1);" class="btn btn-primary">返 回</a>
+                </div>
+            </div>
+            <!-- /.panel-body -->
+            <div class="panel-footer">
+                &nbsp;
+            </div>
         </div>
 
-        <div style="text-align:center;">
-            <a href="javascript:history.go(-1);" class="btn btn-primary">返 回</a>
-        </div>
-    </div>
-    <!-- /.panel-body -->
-    <div class="panel-footer">
-        &nbsp;
     </div>
 </div>
 
+        <!-- 模态框（Modal） -->
+        <div class="modal fade" id="deleteArticleModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title" id="myModalLabel">删除问答</h4>
+                    </div>
+                    <div class="modal-body">确定要删除该问答吗？</div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                        <button type="button" class="btn btn-primary" onclick="$('#deleteArticleForm_' + uid).submit();">确认</button>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal -->
+        </div>
 
-<!-- 模态框（Modal） -->
-<div class="modal fade" id="deleteArticleModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel">删除问答</h4>
-            </div>
-            <div class="modal-body">确定要删除该问答吗？</div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary" onclick="$('#deleteArticleForm_' + uid).submit();">确认</button>
-            </div>
-        </div><!-- /.modal-content -->
-    </div><!-- /.modal -->
-</div>
 
-
-<script>
-    $(document).ready(function () {
-        $('#dataTables-example').DataTable({
-            "responsive": true,
-            "paging": true,
-            "ordering": true,
-            "info": false,
-            "searching": true,
-            "pageLength": 25,
-            "order": [[2, "desc"]],
-        });
-    });
-</script>
+        <script>
+            $(document).ready(function () {
+                $('#dataTables-example').DataTable({
+                    "responsive": true,
+                    "paging": true,
+                    "ordering": true,
+                    "info": false,
+                    "searching": true,
+                    "pageLength": 25,
+                    "order": [[2, "desc"]],
+                });
+            });
+        </script>
 
