--- a/SmartCMS/Content/Site.css
+++ b/SmartCMS/Content/Site.css
@@ -14,6 +14,9 @@ body {
     font-family:"宋体" Arial;
 }
 
+.navbar {
+    margin-bottom:10px !important;
+}
 a {
     color: #333;
     outline: none;
@@ -106,8 +109,8 @@ h5 a:link, h5 a:visited, h5 a:active {
 /* main layout
 ----------------------------------------------------------*/
 .content-wrapper {
-    margin: 0 auto;
-    background: url(../Images/accent.png) 35px -7px no-repeat;
+    margin: -10px auto;
+    background: url(../Images/accent.png) 61px -7px no-repeat;
     background-color: #efeeef;
     padding-bottom: 30px;
     padding-top: 30px;
@@ -1333,6 +1336,7 @@ input::-webkit-input-placeholder {
 
 h1.question{
     font-family:微软雅黑 !important;
+    margin-top:0px !important;
 }
 
 .question-info{
@@ -1352,13 +1356,14 @@ h3.best-answer i.glyphicon
 h3.other-answer i.glyphicon
 {
     color:#999;
+    font-size: 0.8em;
 }
 
 hr.question{
     width: 100%;
     background: #d0c8c8;
     height: 1px;
-    margin: 20px 0 20px 0;
+    margin: 10px 0 20px 0;
 }
 
 .question-left{
@@ -1393,4 +1398,16 @@ hr.question{
 .btn-group .btn{
     margin-left: -8px !important;
     border-radius: 10px;
+}
+
+.other{
+    float: left;
+    margin: 17px 0 0 0;
+}
+
+.other .btn-xs{
+    margin: 0px !important;
+    width: 64px !important;
+    border-radius: 10px;
+    min-width: 20px;
 }
