--- a/SmartCMS/Views/CMS/Question.cshtml
+++ b/SmartCMS/Views/CMS/Question.cshtml
@@ -1,4 +1,6 @@
 ﻿@using SmartCMS.Models;
+@using SmartCMS.Extensions;
+
 @model QuestionViewModel
 
 
@@ -36,7 +38,7 @@
                 </div>
             }
 
-            <h1 class="question"> <i class="glyphicon glyphicon-question-sign"></i>@Model.Question</h1>
+            <h1 class="question"> <i class="glyphicon glyphicon-question-sign"></i>@(new HtmlString(Model.Question.FormatHtml()))</h1>
 
 
             <span class="question-info">@Model.AskedBy.RealName <span class="user-level">@Model.AskedBy.Level</span> |  提问<text>@Model.Hits</text>次</span>
@@ -47,11 +49,12 @@
             <h3 class="best-answer"><i class="glyphicon glyphicon-ok-circle"></i>最佳答案</h3>
             @if (Model.BestAnswer != null)
             {
-                @Model.BestAnswer.Content
+                <text>@(new HtmlString(Model.BestAnswer.Content.FormatHtml()))</text>
+                Model.AnswerCount--;
             }
             else
             {
-                <div>暂无</div>
+                <div>暂无</div>                
             }
             
             <hr class="question" />
@@ -64,16 +67,43 @@
             }
             @foreach (AnswerViewModel answer in Model.Answers)
             {
+                if(Model.BestAnswer !=null && Model.BestAnswer.Id == answer.Id)
+                {
+                    continue;
+                }
                 <text>
                     <div class="other-answer-container">
-                        @answer.Content
-                        <br />
-                        <span class="question-info">@answer.AnswerBy.RealName <span class="user-level">@answer.AnswerBy.Level</span> |  回答于<i>@answer.AnswerAt.Value.ToString("yyyy-MM-dd HH:mm")</i></span>
-
-                        <div class="btn-group" style="float:right">
-                            <button type="button" class="btn btn-default like" aid="@answer.Id"><span class="glyphicon glyphicon-thumbs-up"></span>赞<i>@answer.Likes</i></button>
-                            <button type="button" class="btn btn-default unlike" aid="@answer.Id"><span class="glyphicon glyphicon-thumbs-down"></span>踩<i>@answer.Unlikes</i></button>
+                        <p>                            
+                            @(new HtmlString(answer.Content.FormatHtml()))
+                        </p>
+                        
+                        <div>
+                            <div class="question-info other">
+                                @answer.AnswerBy.RealName <span class="user-level">@answer.AnswerBy.Level</span> |  回答于<i>@answer.AnswerAt.Value.ToString("yyyy-MM-dd HH:mm")</i>
+                                @if (User.IsInRole(Constants.Roles.ROLE_ADMIN) 
+                                    || User.IsInRole(Constants.Roles.ROLE_CHIEF_EDITOR))
+                                {
+                                    <button type="button" class="btn btn-info btn-xs">采纳</button>    
+                                }
+                                @if (User.IsInRole(Constants.Roles.ROLE_ADMIN)
+                                    || User.IsInRole(Constants.Roles.ROLE_CHIEF_EDITOR)
+                                    || currentUser.Id == answer.AnswerBy.ID)
+                                {
+                                    <button type="button" class="btn btn-warning btn-xs" onclick="javascript:uid=@answer.Id; $('#deleteAnswerModal').modal('show'); ">删除</button>
+                                    using (Html.BeginForm("DeleteAnswer", "CMS", FormMethod.Post, new { id = "deleteAnswerForm_" + answer.Id, style = "display:none;" }))
+                                    {
+                                        @Html.AntiForgeryToken()
+                                        <input type="hidden" name="id" value="@answer.Id" />
+                                    }
+                                }
+                            </div>
+                            <div class="btn-group" style="float:right">
+                                <button type="button" class="btn btn-default like" aid="@answer.Id"><span class="glyphicon glyphicon-thumbs-up"></span>赞<i>@answer.Likes</i></button>
+                                <button type="button" class="btn btn-default unlike" aid="@answer.Id"><span class="glyphicon glyphicon-thumbs-down"></span>踩<i>@answer.Unlikes</i></button>
+                            </div>
+                            <br class="clear" />
                         </div>
+                        
                     </div>
                     <hr class="question" />
                 </text>
@@ -124,16 +154,36 @@
             @currentUser.RealName
             <hr class="question" />
 
-            <h2>其他类似问题</h2>
+            <h3>其他类似问题</h3>
             <hr class="question" />
 
-            <h2>等待您来回答</h2>
+            <h3>等待您来回答</h3>
             <hr class="question" />
         </div>
 
         <br class="clear" />
     </div>
 </div>
+
+
+
+<!-- 模态框（Modal） -->
+<div class="modal fade" id="deleteAnswerModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">删除回答</h4>
+            </div>
+            <div class="modal-body">确定要删除该回答？</div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" onclick="$('#deleteAnswerForm_' + uid).submit();">确认</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
+</div>
+
 
 <script>
     $(".file").on("change", "input[type='file']", function () {
@@ -147,4 +197,28 @@
             return false;
         }
     })
+
+
+    $("button.like").on("click", function () {
+        var id = $(this).attr("aid");
+        $(this).attr("disabled", "disabled");
+        var obj = $(this);
+        $.getJSON("/CMS/LikeAnswer/" + id, function (result) {
+            if (result) {
+                $(obj).find("i").html(result);
+            }
+        });
+    });
+
+    $("button.unlike").on("click", function () {
+        var id = $(this).attr("aid");
+        $(this).attr("disabled", "disabled");        
+        var obj = $(this);
+        $.getJSON("/CMS/UnlikeAnswer/" + id, function (result) {
+            if (result) {
+                $(obj).find("i").html(result);
+            }
+        });
+        
+    });
 </script>
